@@ -1,3 +1,9 @@
+2021-09-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc2.cc,
+	  src/stm8/gen.c:
+	  Fix bug #3282.
+
 2021-09-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
